fortitude/src/rules/style/snapshots/fortitude__rules__style__tests__missing-exit-or-cycle-label_S021.f90.snap
---
source: fortitude/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
warning: ./resources/test/fixtures/style/S021.f90:4:7: S021 'exit' statement in named 'do' loop missing label 'label1'
  |
2 |   label1: do
3 |     if (.true.) then
4 |       EXIT
  |       ^^^^ S021
5 |     end if
6 |   end do label1
  |

warning: ./resources/test/fixtures/style/S021.f90:9:17: S021 'exit' statement in named 'do' loop missing label 'label2'
   |
 8 |   label2: do
 9 |     if (.true.) exit
   |                 ^^^^ S021
10 |   end do label2
   |

warning: ./resources/test/fixtures/style/S021.f90:28:19: S021 'cycle' statement in named 'do' loop missing label 'inner'
   |
26 |   label6: do i = 1, 2
27 |     inner: do j = 1, 2
28 |       if (.true.) CYCLE ! named inner loop: warns on inner loop
   |                   ^^^^^ S021
29 |     end do inner
30 |   end do label6
   |
