fortitude/src/rules/style/snapshots/fortitude__rules__style__tests__old-style-array-literal_S041.f90.snap
---
source: fortitude/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
warning: ./resources/test/fixtures/style/S041.f90:2:21: S041 Array literal uses old-style syntax: prefer `[...]`
  |
1 | program test
2 |   integer :: a(3) = (/1, 2, 3/)
  |                     ^^^^^^^^^^^ S041
3 |   integer :: b(3) = (/ &
4 |        1, &
  |

warning: ./resources/test/fixtures/style/S041.f90:3:21: S041 Array literal uses old-style syntax: prefer `[...]`
  |
1 |   program test
2 |     integer :: a(3) = (/1, 2, 3/)
3 |     integer :: b(3) = (/ &
  |  _____________________^
4 | |        1, &
5 | |        2, &
6 | |        3 &
7 | |        /)
  | |_________^ S041
8 |     if (.true.) a = (/4, 5, 6/)
9 |     b(1:3) = (/ &
  |

warning: ./resources/test/fixtures/style/S041.f90:8:19: S041 Array literal uses old-style syntax: prefer `[...]`
   |
 6 |        3 &
 7 |        /)
 8 |   if (.true.) a = (/4, 5, 6/)
   |                   ^^^^^^^^^^^ S041
 9 |   b(1:3) = (/ &
10 |        4, &
   |

warning: ./resources/test/fixtures/style/S041.f90:9:12: S041 Array literal uses old-style syntax: prefer `[...]`
   |
 7 |          /)
 8 |     if (.true.) a = (/4, 5, 6/)
 9 |     b(1:3) = (/ &
   |  ____________^
10 | |        4, &
11 | |        5, &
12 | |        6 &
13 | |        /)
   | |_________^ S041
14 |   end program test
   |
